--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="hero" id="hero">
         <div class="wrapper">
           <div class="hero__photo-container">
-            <div class="hero__photo"></div>
+            <img src="./assets/me.jpg" class="hero__photo" />
           </div>
           <p class="hero__description">
             Desarrollador Frontend Junior, con conocimiento en backend con
