Add Chat to projects

--- a/index.html
+++ b/index.html
@@ -221,7 +221,32 @@
         <h2 class="projects__title">Proyectos</h2>
         <div class="project__item-container">
           <img
-            src="./assets/projects/gallery.png"
+            src="./assets/projects/chat.jpg"
+            alt="Authenticate App"
+            class="project__image"
+            loading="lazy"
+          />
+          <div class="project__description">
+            <div class="project__description-wrapper">
+              <h4>Chat</h4>
+              <p>
+                Una aplicación de chat hecha en Next.js, en la cual usamos API REST para la creación y presentación de
+                información de los usuarios. Para el chat, creé un servidor de Web Sockets, para mantener la comunicación en tiempo real, y almacená los mensajes en una BD de MongoDB.
+              </p>
+              <a
+                href="https://megabyte-chat.vercel.app/"
+                target="_blank"
+                >Ver proyecto</a
+              >
+            </div>
+            <div class="project__title-container">
+              <h2>CHAT</h2>
+            </div>
+          </div>
+        </div>
+        <div class="project__item-container">
+          <img
+            src="./assets/projects/gallery.jpg"
             alt="Gallery"
             class="project__image"
             loading="lazy"
@@ -245,10 +270,9 @@
             </div>
           </div>
         </div>
-
         <div class="project__item-container">
           <img
-            src="./assets/projects/portal.png"
+            src="./assets/projects/portal.jpg"
             alt="Portal"
             class="project__image"
             loading="lazy"
@@ -274,7 +298,7 @@
         </div>
         <div class="project__item-container">
           <img
-            src="./assets/projects/authenticate.png"
+            src="./assets/projects/authenticate.jpg"
             alt="Authenticate App"
             class="project__image"
             loading="lazy"
