Add code buttons

--- a/index.html
+++ b/index.html
@@ -230,14 +230,21 @@
             <div class="project__description-wrapper">
               <h4>Chat</h4>
               <p>
-                Una aplicación de chat hecha en Next.js, en la cual usamos API REST para la creación y presentación de
-                información de los usuarios. Para el chat, creé un servidor de Web Sockets, para mantener la comunicación en tiempo real, y almacená los mensajes en una BD de MongoDB.
+                Una aplicación de chat hecha con Next.js, en la cual usé API REST para la creación y presentación de
+                información de los usuarios. Para el chat, creé un servidor de Web Sockets, para mantener la comunicación en tiempo real, y almacenar los mensajes en una BD de MongoDB.
               </p>
-              <a
-                href="https://megabyte-chat.vercel.app/"
+              <div class="project__description-buttons">
+                <a
+                  href="https://megabyte-chat.vercel.app/"
+                  target="_blank"
+                  >Ver proyecto</a
+                >
+                <a
+                href="https://github.com/jonathan-cursos/megabyte_chat"
                 target="_blank"
-                >Ver proyecto</a
+                >Ver Código</a
               >
+              </div>
             </div>
             <div class="project__title-container">
               <h2>CHAT</h2>
@@ -261,9 +268,16 @@
                 almacenar la imagen usé Cloudinary. El backend corre en Heroku,
                 y el frontend en Firebase.
               </p>
-              <a href="https://galleryfrontend.web.app/" target="_blank"
-                >Ver proyecto</a
+              <div class="project__description-buttons">
+                <a href="https://galleryfrontend.web.app/" target="_blank"
+                  >Ver proyecto</a
+                >
+                <a
+                href="https://github.com/jonathangg03/gallery_frontend"
+                target="_blank"
+                >Ver Código</a
               >
+              </div>
             </div>
             <div class="project__title-container">
               <h2>GALLERY</h2>
@@ -287,9 +301,16 @@
                 con formato. El backend corre en Heroku, y el frontend en
                 Firebase.
               </p>
-              <a href="https://portal-d0251.web.app/" target="_blank"
-                >Ver proyecto</a
+              <div class="project__description-buttons">
+                <a href="https://portal-d0251.web.app/" target="_blank"
+                  >Ver proyecto</a
+                >
+                <a
+                href="https://github.com/jonathangg03/portal-cesa-frontend"
+                target="_blank"
+                >Ver Código</a
               >
+              </div>
             </div>
             <div class="project__title-container">
               <h2>PORTAL</h2>
@@ -313,11 +334,18 @@
                 ver su nombre, apellidos y correo. Toda la aplicación corre en
                 Heroku.
               </p>
-              <a
-                href="https://authenticate-app-frontend.herokuapp.com/"
+              <div class="project__description-buttons">
+                <a
+                  href="https://authenticate-app-frontend.herokuapp.com/"
+                  target="_blank"
+                  >Ver proyecto</a
+                >
+                <a
+                href="https://github.com/jonathan-cursos/authenticate_app_frontend"
                 target="_blank"
-                >Ver proyecto</a
+                >Ver Código</a
               >
+              </div>
             </div>
             <div class="project__title-container">
               <h2>AUTHENTICATE APP</h2>
