Change twitter link and delete facebook

--- a/index.html
+++ b/index.html
@@ -386,16 +386,7 @@
               <ul>
                 <li class="contact__social-item">
                   <div>
-                    <a
-                      href="https://www.facebook.com/jona.garcia.395"
-                      target="_blank"
-                      ><i class="fab fa-facebook-square"></i
-                    ></a>
-                  </div>
-                </li>
-                <li class="contact__social-item">
-                  <div>
-                    <a href="https://twitter.com/jonathangg_03" target="_blank"
+                    <a href="https://twitter.com/jona_davdev" target="_blank"
                       ><i class="fab fa-twitter"></i
                     ></a>
                   </div>
