--- a/index.html
+++ b/index.html
@@ -9,19 +9,16 @@
       rel="stylesheet"
     />
     <link  rel="icon" href="./assets/icon.png" type="image/png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;600;700&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,500;0,600;1,400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/module.css" />
     <link
-      href="./styles/medium.css"
+      href="./styles/breakpoints/medium.css"
       rel="stylesheet"
       type="text/css"
       media="screen and (min-width: 860px)"
@@ -418,6 +415,7 @@
           </div>
         </div>
       </footer>
+      </div>
       <script>
         const $activator = document.getElementById("nav__activator");
         const $nav = document.getElementById("nav");
@@ -449,6 +447,5 @@
           }
         }
       </script>
-    </div>
   </body>
 </html>
