Change Gallery project

--- a/index.html
+++ b/index.html
@@ -259,18 +259,14 @@
             <div class="project__description-wrapper">
               <h4>Gallery</h4>
               <p>
-                Una aplicación de galería, en la cual subes una imagen, con una
-                descripción, y un nombre y al subirse podrás verla en el inicio.
-                También podremos eliminarla o verla en pantalla completa. Para
-                almacenar la imagen usé Cloudinary. El backend corre en Heroku,
-                y el frontend en Firebase.
+                Una aplicación básica de galería, hecha con Next.js, Node.js para el backend con Multer para manejar las imagenes, y haciendo uso de la librería de CSS NextUI.
               </p>
               <div class="project__description-buttons">
-                <a href="https://galleryfrontend.web.app/" target="_blank"
+                <a href="https://davdev-gallery-nextui.vercel.app/" target="_blank"
                   >Ver proyecto</a
                 >
                 <a
-                href="https://github.com/jonathangg03/gallery_frontend"
+                href="https://github.com/jonathangg03/davdev-gallery-nextui"
                 target="_blank"
                 >Ver Código</a
               >
