--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
       <div class="nav__activator" id="nav__activator">
         <i class="fas fa-angle-left" id="activator__icon"></i>
       </div>
-      <!-- <div class="hero" id="hero">
-        <div class="wrapper">
+       <div class="hero" id="hero">
           <div class="hero__photo-container">
-            <img src="./assets/me.jpg" class="hero__photo" />
+            <img src="./assets/me.jpg" />
           </div>
           <p class="hero__description">
             Desarrollador Frontend Junior, con conocimiento en backend con
@@ -75,9 +74,8 @@
             aprender de otros programadores, poder compartir y aportar mis
             conocimientos.
           </p>
-        </div>
       </div>
-      <section class="habilities" id="habilities">
+      <!--<section class="habilities" id="habilities">
         <h2 class="habilities__title">Habilidades</h2>
         <ul class="habilities__list">
           <li class="habilities__list-item">
