--- a/index.html
+++ b/index.html
@@ -75,9 +75,20 @@
             conocimientos.
           </p>
       </div>
-      <!--<section class="habilities" id="habilities">
+      <section class="habilities" id="habilities">
         <h2 class="habilities__title">Habilidades</h2>
-        <ul class="habilities__list">
+          <ul>
+            <li>Maquteción web con HTML</li>
+            <li>Estilado de la web con CSS. Tambien con librerías de CSS como Bootstrap y NextUI.</li>
+            <li>Uso de React.js como librería principal para la creación de interfaces.</li>
+            <li>Uso Next.js como framework de React.js, para renderizado en el servidor.</li>
+            <li>Configuración básica de Webpack para empaquetar la aplicación de React.js.</li>
+            <li>Creación de REST API's con Node.js, usando Express.js para la configuración del servidor.</li>
+            <li>Desplegar aplicaciónes de React.js en Vercel, Heroku, y Firebase.</li>
+            <li>Desplegar API REST en Heroku.</li>
+            <li>Manejar las versiones de los proyectos con Git y mantener repositorios en GitHub.</li>
+          </ul>
+        <!-- <ul class="habilities__list">
           <li class="habilities__list-item">
             <div class="hability__logo">
               <img src="./assets/logos/html.png" alt="webpack" loading="lazy" />
@@ -206,9 +217,9 @@
               </p>
             </div>
           </li>
-        </ul>
+        </ul> -->
       </section>
-      <section class="projects" id="projects">
+      <!--<section class="projects" id="projects">
         <h2 class="projects__title">Proyectos</h2>
         <div class="project__item-container">
           <img
