--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     />
     <link rel="stylesheet" href="./styles/module.css" />
     <link
+    href="./styles/breakpoints/small.css"
+    rel="stylesheet"
+    type="text/css"
+    media="screen and (min-width: 600px)"
+  />
+    <link
       href="./styles/breakpoints/medium.css"
       rel="stylesheet"
       type="text/css"
@@ -79,10 +85,11 @@
         <h2 class="habilities__title">Habilidades</h2>
           <ul>
             <li>Maquteción web con HTML</li>
-            <li>Estilado de la web con CSS. Tambien con librerías de CSS como Bootstrap y NextUI.</li>
-            <li>Uso de React.js como librería principal para la creación de interfaces.</li>
-            <li>Uso Next.js como framework de React.js, para renderizado en el servidor.</li>
+            <li>Estilizar de la web con CSS. Tambien con librerías de CSS como Bootstrap y NextUI.</li>
+            <li>Desarrollo con React.js como librería principal para la creación de interfaces.</li>
+            <li>Desarrollo con Next.js como framework de React.js, para renderizado en el servidor.</li>
             <li>Configuración básica de Webpack para empaquetar la aplicación de React.js.</li>
+            <li>Integrar frontend con el backend.</li>
             <li>Creación de REST API's con Node.js, usando Express.js para la configuración del servidor.</li>
             <li>Desplegar aplicaciónes de React.js en Vercel, Heroku, y Firebase.</li>
             <li>Desplegar API REST en Heroku.</li>
