--- a/index.html
+++ b/index.html
@@ -95,265 +95,137 @@
             <li>Desplegar API REST en Heroku.</li>
             <li>Manejar las versiones de los proyectos con Git y mantener repositorios en GitHub.</li>
           </ul>
-        <!-- <ul class="habilities__list">
-          <li class="habilities__list-item">
-            <div class="hability__logo">
-              <img src="./assets/logos/html.png" alt="webpack" loading="lazy" />
-            </div>
-            <p class="hability__title">HTML</p>
-            <div class="hability__description">
-              <p>
-                Usado para crear la estructura de cada proyecto. Definimos la
-                información que se presentará al usuario.
-              </p>
-            </div>
-          </li>
-          <li class="habilities__list-item">
-            <div class="hability__logo">
-              <img
-                src="./assets/logos/css.png"
-                class="css"
-                alt="css"
-                loading="lazy"
-              />
-            </div>
-            <p class="hability__title">CSS</p>
-            <div class="hability__description">
-              <p>
-                Para dar estilos a la información que se está presentando, y
-                para que las aplicaciones tengan un buen aspecto.
-              </p>
-            </div>
-          </li>
-          <li class="habilities__list-item">
-            <div class="hability__logo">
-              <img
-                src="./assets/logos/js.png"
-                alt="JavaScript"
-                loading="lazy"
-              />
-            </div>
-            <p class="hability__title">JavaScript</p>
-            <div class="hability__description">
-              <p>
-                El núcleo de toda aplicación web. Con él definimos el
-                comportamiento de nuestras aplicaciones. Es el lenguaje de
-                programación que sabe leer el navegador.
-              </p>
-            </div>
-          </li>
-          <li class="habilities__list-item">
-            <div class="hability__logo">
-              <img
-                src="./assets/logos/react.png"
-                alt="React.js"
-                loading="lazy"
-              />
-            </div>
-            <p class="hability__title">React.js</p>
-            <div class="hability__description">
-              <p>
-                Librería de JavaScript para creación de interfaces. Permite
-                crear SPA y una mejor reutilización del código basado en
-                componentes.
-              </p>
-            </div>
-          </li>
-          <li class="habilities__list-item">
-            <div class="hability__logo">
-              <img
-                src="./assets/logos/node.png"
-                class="node"
-                alt="Node.js"
-                loading="lazy"
-              />
-            </div>
-            <p class="hability__title">Node.js - Express.js</p>
-            <div class="hability__description">
-              <p>
-                Para usar JavaScript del lado del servidor. En mi caso, lo uso
-                para crear las API REST de los proyectos y enviar datos a una
-                Base de datos.
-              </p>
-            </div>
-          </li>
-          <li class="habilities__list-item">
-            <div class="hability__logo">
-              <img
-                src="./assets/logos/webpack.png"
-                class="webpack"
-                alt="Webpack"
-                loading="lazy"
-              />
-            </div>
-            <p class="hability__title">Webpack</p>
-            <div class="hability__description">
-              <p>
-                Con él podemos empaquetar varios tipos de archivos, para que al
-                final, nos retorne un HTML, un CSS y un JS, que son los archivos
-                que lee el navegador.
-              </p>
-            </div>
-          </li>
-          <li class="habilities__list-item">
-            <div class="hability__logo">
-              <img
-                src="./assets/logos/bootstrap.png"
-                class="bootstrap"
-                alt="Bootstrap"
-                loading="lazy"
-              />
-            </div>
-            <p class="hability__title">Bootstrap</p>
-            <div class="hability__description">
-              <p>
-                Nos otorga unos estilos ya definidos, que podemos usar de forma
-                sencilla para no tener que crearlos desde cero.
-              </p>
-            </div>
-          </li>
-          <li class="habilities__list-item">
-            <div class="hability__logo">
-              <img src="./assets/logos/git.png" alt="Git" loading="lazy" />
-            </div>
-            <p class="hability__title">Git (y GitHub)</p>
-            <div class="hability__description">
-              <p>
-                El sistema de control de versiones que utilizo es Git, y para
-                almacenarlos en un repositorio, uso GitHub.
-              </p>
-            </div>
-          </li>
-        </ul> -->
       </section>
-      <!--<section class="projects" id="projects">
+      <section class="projects" id="projects">
         <h2 class="projects__title">Proyectos</h2>
-        <div class="project__item-container">
-          <img
-            src="./assets/projects/chat.jpg"
-            alt="Authenticate App"
-            class="project__image"
-            loading="lazy"
-          />
-          <div class="project__description">
-            <div class="project__description-wrapper">
-              <h4>Chat</h4>
-              <p>
-                Una aplicación de chat hecha con Next.js, en la cual usé API REST para la creación y presentación de
-                información de los usuarios. Para el chat, creé un servidor de Web Sockets, para mantener la comunicación en tiempo real, y almacenar los mensajes en una BD de MongoDB.
-              </p>
-              <div class="project__description-buttons">
-                <a
-                  href="https://megabyte-chat.vercel.app/"
+        <div class="projects__container">
+          <div class="project__item-container">
+            <img
+              src="./assets/projects/chat.jpg"
+              alt="Authenticate App"
+              class="project__image"
+              loading="lazy"
+            />
+            <div class="project__description">
+              <div class="project__description-wrapper">
+                <h4>Chat</h4>
+                <p>
+                  Una aplicación de chat hecha con Next.js, en la cual usé API REST para la creación y presentación de
+                  información de los usuarios. Para el chat, creé un servidor de Web Sockets, para mantener la comunicación en tiempo real, y almacenar los mensajes en una BD de MongoDB.
+                </p>
+                <div class="project__description-buttons">
+                  <a
+                    href="https://megabyte-chat.vercel.app/"
+                    target="_blank"
+                    >Ver proyecto</a
+                  >
+                  <a
+                  href="https://github.com/jonathan-cursos/megabyte_chat"
                   target="_blank"
-                  >Ver proyecto</a
+                  >Ver Código</a
                 >
-                <a
-                href="https://github.com/jonathan-cursos/megabyte_chat"
-                target="_blank"
-                >Ver Código</a
-              >
+                </div>
+              </div>
+              <div class="project__title-container">
+                <h2>CHAT</h2>
               </div>
             </div>
-            <div class="project__title-container">
-              <h2>CHAT</h2>
-            </div>
           </div>
-        </div>
-        <div class="project__item-container">
-          <img
-            src="./assets/projects/gallery.jpg"
-            alt="Gallery"
-            class="project__image"
-            loading="lazy"
-          />
-          <div class="project__description">
-            <div class="project__description-wrapper">
-              <h4>Gallery</h4>
-              <p>
-                Una aplicación básica de galería, hecha con Next.js, Node.js para el backend con Multer para manejar las imagenes, y haciendo uso de la librería de CSS NextUI.
-              </p>
-              <div class="project__description-buttons">
-                <a href="https://davdev-gallery-nextui.vercel.app/" target="_blank"
-                  >Ver proyecto</a
-                >
-                <a
-                href="https://github.com/jonathangg03/davdev-gallery-nextui"
-                target="_blank"
-                >Ver Código</a
-              >
-              </div>
-            </div>
-            <div class="project__title-container">
-              <h2>GALLERY</h2>
-            </div>
-          </div>
-        </div>
-        <div class="project__item-container">
-          <img
-            src="./assets/projects/portal.jpg"
-            alt="Portal"
-            class="project__image"
-            loading="lazy"
-          />
-          <div class="project__description">
-            <div class="project__description-wrapper">
-              <h4>Portal</h4>
-              <p>
-                Este proyecto es un pequeño portal el cual es una recreación del
-                que usamos en mi trabajo actual, pero añadiendo funcionalidades
-                y rediseño. Lo más destacado es que contiene un editor de textos
-                con formato. El backend corre en Heroku, y el frontend en
-                Firebase.
-              </p>
-              <div class="project__description-buttons">
-                <a href="https://portal-d0251.web.app/" target="_blank"
-                  >Ver proyecto</a
-                >
-                <a
-                href="https://github.com/jonathangg03/portal-cesa-frontend"
-                target="_blank"
-                >Ver Código</a
-              >
-              </div>
-            </div>
-            <div class="project__title-container">
-              <h2>PORTAL</h2>
-            </div>
-          </div>
-        </div>
-        <div class="project__item-container">
-          <img
-            src="./assets/projects/authenticate.jpg"
-            alt="Authenticate App"
-            class="project__image"
-            loading="lazy"
-          />
-          <div class="project__description">
-            <div class="project__description-wrapper">
-              <h4>Authenticate App</h4>
-              <p>
-                Una aplicación que consiste en una ventana de log in en la cual
-                se implemente estrategias de ingreso local, con Google, con
-                Twitter y con Facebook, y en la cual, una vez ingresamos, podrá
-                ver su nombre, apellidos y correo. Toda la aplicación corre en
-                Heroku.
-              </p>
-              <div class="project__description-buttons">
-                <a
-                  href="https://authenticate-app-frontend.herokuapp.com/"
+          <div class="project__item-container">
+            <img
+              src="./assets/projects/gallery.jpg"
+              alt="Gallery"
+              class="project__image"
+              loading="lazy"
+            />
+            <div class="project__description">
+              <div class="project__description-wrapper">
+                <h4>Gallery</h4>
+                <p>
+                  Una aplicación básica de galería, hecha con Next.js, Node.js para el backend con Multer para manejar las imagenes, y haciendo uso de la librería de CSS NextUI.
+                </p>
+                <div class="project__description-buttons">
+                  <a href="https://davdev-gallery-nextui.vercel.app/" target="_blank"
+                    >Ver proyecto</a
+                  >
+                  <a
+                  href="https://github.com/jonathangg03/davdev-gallery-nextui"
                   target="_blank"
-                  >Ver proyecto</a
+                  >Ver Código</a
                 >
-                <a
-                href="https://github.com/jonathan-cursos/authenticate_app_frontend"
-                target="_blank"
-                >Ver Código</a
-              >
+                </div>
+              </div>
+              <div class="project__title-container">
+                <h2>GALLERY</h2>
               </div>
             </div>
-            <div class="project__title-container">
-              <h2>AUTHENTICATE APP</h2>
+          </div>
+          <div class="project__item-container">
+            <img
+              src="./assets/projects/portal.jpg"
+              alt="Portal"
+              class="project__image"
+              loading="lazy"
+            />
+            <div class="project__description">
+              <div class="project__description-wrapper">
+                <h4>Portal</h4>
+                <p>
+                  Este proyecto es un pequeño portal el cual es una recreación del
+                  que usamos en mi trabajo actual, pero añadiendo funcionalidades
+                  y rediseño. Lo más destacado es que contiene un editor de textos
+                  con formato. El backend corre en Heroku, y el frontend en
+                  Firebase.
+                </p>
+                <div class="project__description-buttons">
+                  <a href="https://portal-d0251.web.app/" target="_blank"
+                    >Ver proyecto</a
+                  >
+                  <a
+                  href="https://github.com/jonathangg03/portal-cesa-frontend"
+                  target="_blank"
+                  >Ver Código</a
+                >
+                </div>
+              </div>
+              <div class="project__title-container">
+                <h2>PORTAL</h2>
+              </div>
+            </div>
+          </div>
+          <div class="project__item-container">
+            <img
+              src="./assets/projects/authenticate.jpg"
+              alt="Authenticate App"
+              class="project__image"
+              loading="lazy"
+            />
+            <div class="project__description">
+              <div class="project__description-wrapper">
+                <h4>Authenticate App</h4>
+                <p>
+                  Una aplicación que consiste en una ventana de log in en la cual
+                  se implemente estrategias de ingreso local, con Google, con
+                  Twitter y con Facebook, y en la cual, una vez ingresamos, podrá
+                  ver su nombre, apellidos y correo. Toda la aplicación corre en
+                  Heroku.
+                </p>
+                <div class="project__description-buttons">
+                  <a
+                    href="https://authenticate-app-frontend.herokuapp.com/"
+                    target="_blank"
+                    >Ver proyecto</a
+                  >
+                  <a
+                  href="https://github.com/jonathan-cursos/authenticate_app_frontend"
+                  target="_blank"
+                  >Ver Código</a
+                >
+                </div>
+              </div>
+              <div class="project__title-container">
+                <h2>AUTHENTICATE APP</h2>
+              </div>
             </div>
           </div>
         </div>
@@ -362,7 +234,7 @@
           <a href="https://github.com/jonathangg03" target="_blank">GitHub</a>
         </p>
       </section>
-      <footer>
+      <!--<footer>
         <div class="wrapper">
           <div class="contact__container">
             <section class="form" id="contact">
