--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
       type="text/css"
       media="screen and (min-width: 860px)"
     />
+    <link
+    href="./styles/breakpoints/xl.css"
+    rel="stylesheet"
+    type="text/css"
+    media="screen and (min-width: 1710px)"
+  />
     <title>Jonathan David García González</title>
     <script
       src="https://kit.fontawesome.com/473d269aa9.js"
@@ -252,7 +258,7 @@
           <button type="submit">Enviar</button>
         </form>
       </section>
-      <!--<footer>
+      <footer>
         <div class="wrapper">
           <div class="contact__container">
 
@@ -295,7 +301,7 @@
             </div>
           </div>
         </div>
-      </footer> -->
+      </footer>
       </div>
       <script>
         const $activator = document.getElementById("nav__activator");
