--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <i class="fas fa-angle-left" id="activator__icon"></i>
         </div>
       </header>
-      <div class="hero" id="hero">
+      <!-- <div class="hero" id="hero">
         <div class="wrapper">
           <div class="hero__photo-container">
             <img src="./assets/me.jpg" class="hero__photo" />
@@ -410,7 +410,7 @@
             </div>
           </div>
         </div>
-      </footer>
+      </footer> -->
       </div>
       <script>
         const $activator = document.getElementById("nav__activator");
