Style projects in mobile

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
             <div class="projects__item-description">
                 <p>
-                  Un chat básico, donde podremos enviar y recibir mensajes en tiempo real
+                  Un chat básico, donde podremos enviar y recibir mensajes en tiempo real.
                 </p>
                 <div class="projects__item-description-buttons">
                   <a
